# aero-weather

./: .markdownlint.json  .pre-commit-config.yaml  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: gh_pages.yml  publish.yml
src/: App.tsx  main.tsx  styles.css  weather.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/backgrounds/: bg-sources.md
src/assets/styles/: styles.css
src/hooks/: useFetchGeolocationAndForecast.tsx
src/lib/: fetchers.ts  formatters.ts  weather.ts
