[package]
name = "aero-weather"
version = "0.0.0"
description = "A Tauri App"
authors = ["Piotr Płaczek <piotrpdev@gmail.com>", "kilobyte <https://x.com/1000kilobytes>"]
license = "GPL-3.0"
repository = "https://github.com/piotrpdev/aero-weather"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-decorum = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5.1"
